# knowsuchagency.github.io

./: .gitignore  .gitmodules  404.html  CNAME  config.toml  config.yaml  index.html  index.xml  invoke.yaml  pyproject.toml  sitemap.xml  tasks.py
.github/workflows/: gh-pages.yml  test.yml
about/: index.html
book/: index.html
categories/: index.html  index.xml
contact/: index.html
content/: about.md  book.html  contact.html
content/posts/: a-moment-of-monoids.md  collatz-conjecture.md  illegal-states.md  mbp-sentiment-analysis.md  monads-for-mortals.md  monads-in-python.md  postmodern-error-handling.md  python-decorators.md
css/: coder-dark.82cdfde46a9d3cb333c54963d591004b0f2bfceea4ade7b8d6c77a79f71aedfd.css  coder.942a78ce33b06d1e6c3f19300fd70afe0ca13613767b1364aa172740e48386db.css  coder.min.406d0bb9b7e93dd1c4497ee4abb177af6bea8f6c16aea89ae05f2aef56ef44e5.css
knowsuchagency_blog/: monads.py
knowsuchagency_blog/notebooks/: a-moment-of-monoids.ipynb  collatz-conjecture.ipynb  monads-for-mortals.ipynb  monads-in-python.ipynb  postmodern-error-handling.ipynb
notebooks/: illegal-states.ipynb  monads-in-python.ipynb
posts/: index.html  index.xml
posts/a-moment-of-monoids/: index.html
posts/avoiding-illegal-state-through-domain-modeling/: index.html
posts/collatz-conjecture-in-python/: index.html
posts/mbp-sentiment-analysis/: index.html
posts/monads-for-mortals-in-python/: index.html
posts/postmodern-error-handling/: index.html
scripts/: tasks.py
series/: index.html  index.xml
static/css/: color.css
tags/: index.html  index.xml
(+57 files in other folders)
