[tool.poetry]
name = "knowsuchagency-blog"
version = "0.1.0"
description = ""
authors = ["Stephan Fitzpatrick <knowsuchagency@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
hypothesis = "^4.57.0"

[tool.poetry.dev-dependencies]
invoke = "^1.3.0"
jupyterlab = "^1.2.4"
toml = "^0.10.0"
"ruamel.yaml" = "^0.16.5"
watchdog = "^0.9.0"
pygments = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
