[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Stephan Fitzpatrick", email = "knowsuchagency@gmail.com"},
]
dependencies = [
    "hypothesis",
    "jupyterlab",
    "toml",
    "ruamel.yaml",
    "watchdog",
    "pygments",
    "nbconvert<6"
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]

serve.call = "scripts.tasks:serve"

render-notebooks.call = "scripts.tasks:render_notebooks"

init-theme = "git submodule update --init --recursive"
update-theme = "git pull --recurse-submodules"
